<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffd9a"
    android:weightSum="1"
    tools:context="com.example.user.rockpaperscissors.MainActivity">
    <ImageView
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/game_logo_large"
        android:layout_weight="0.5" />
    <Button
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/playoption"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/option_buttons"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_weight="0.04"
        android:id="@+id/PlayButton"
        android:onClick="playAction"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/achivementoption"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:background="@drawable/option_buttons"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_weight="0.04"
        android:id="@+id/AchievementsButton"
        android:onClick="achievementAction" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/statsoption"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:background="@drawable/option_buttons"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_weight="0.04"
        android:id="@+id/StatsButton"
        android:onClick="statsAction"/>
    <Button
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/creditsoption"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:background="@drawable/option_buttons"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_weight="0.04"
        android:id="@+id/CreditsButton"
        android:onClick="creditAction"/>
</LinearLayout>