<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fffd9a">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Your Achievements"
        android:id="@+id/your_achievements"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ach_first_win"
        android:id="@+id/first_win_label"
        android:layout_below="@+id/your_achievements"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/unticked_large"
        android:id="@+id/imageView1"
        android:layout_alignTop="@+id/first_win_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ach_ten_wins"
        android:id="@+id/ten_wins_label"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/unticked_large"
        android:id="@+id/imageView2"
        android:layout_alignTop="@+id/ten_wins_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ach_played_100_games"
        android:id="@+id/played_100_games_label"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/unticked_large"
        android:id="@+id/imageView3"
        android:layout_alignTop="@+id/played_100_games_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>